ansible/roles/kubernetes-addons/templates/ops/confluence/confluence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence
  namespace: ops
  labels:
    ops-app: confluence
spec:
  selector:
    ops-app: confluence
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
    - name: confluence
      port: 8090
      targetPort: 8090
